force-app/main/default/objects/Integration_Log__c/fields/Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_Ms__c</fullName>
    <label>Duration Ms</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>