force-app/main/default/objects/Integration_Log__c/fields/R_Order__c.field-meta.xml
<CustomField>
    <fullName>R_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>R Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Integration Logs (R Order)</relationshipLabel>
    <relationshipName>Integration_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>