force-app/main/default/objects/Integration_Log__c/fields/Related_Payment__c.field-meta.xml
<CustomField>
    <fullName>Related_Payment__c</fullName>
    <label>Related Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>PaymentIntegrationLogs</relationshipName>
    <type>Lookup</type>
</CustomField>