force-app/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>TIMEOUT</fullName>
            </value>
            <value>
                <fullName>RETRY_PENDING</fullName>
            </value>
            <value>
                <fullName>FAILED_FINAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>